syntax = "proto3";

option go_package = "./pb";

package pb;

message GetUserConfigurationRequest {}

message UserConfiguration {
    string StorageLimit = 1;
    int64 MinPasswordLength = 2;
    bool AllowPublicUserCreation = 3;
    bool AllowLoginWithEmail = 4;
    bool EnforceMfa = 5;
}

service UserConfigService {
    rpc getUserConfiguration(GetUserConfigurationRequest) returns (UserConfiguration);
}
